for formatting commits